# rbm-rs

./: Cargo.toml  Makefile  README.md
rbm-structpack/: Cargo.toml
rbm-structpack/src/: lib.rs  numbers.rs
src/: algo.rs  error.rs  lib.rs  network.rs  res.rs
src/client/: mod.rs  transport.rs
src/client/transport/: mod.rs  udp.rs
src/client/v1/: action.rs  conn.rs  mod.rs  subscribe.rs
src/conn/: client.rs  mod.rs  transport.rs
src/module/: mod.rs  util.rs
src/module/ai/: mod.rs
src/module/ai/proto/: cmd.rs  mod.rs  sub.rs
src/module/armor/: mod.rs
src/module/armor/proto/: cmd.rs  mod.rs  sub.rs
src/module/battery/: mod.rs
src/module/battery/proto/: sub.rs
src/module/blaster/: mod.rs
src/module/blaster/proto/: cmd.rs
src/module/camera/: mod.rs
src/module/camera/proto/: cmd.rs
src/module/chassis/: mod.rs
src/module/chassis/proto/: action.rs  cmd.rs  mod.rs  sub.rs  subscribe.rs
src/module/common/: cmd.rs  constant.rs  mod.rs  proto.rs
src/module/dds/: mod.rs
src/module/gimbal/: mod.rs
src/module/gripper/: mod.rs
src/module/led/: mod.rs
src/module/robotic_arm/: mod.rs
src/module/sensor/: mod.rs
src/module/servo/: mod.rs
src/module/uart/: mod.rs
src/module/vision/: mod.rs
src/modules/: chassis.rs  mod.rs
src/product/robot/: mod.rs
src/proto/: action.rs  cmd.rs  mod.rs  subscribe.rs  util.rs
src/proto/v1/: action.rs  camera.rs  cset.rs  ctrl.rs  gimbal.rs  gripper.rs  mod.rs  normal.rs  subscribe.rs  util.rs  vision.rs
src/util/: chan.rs  decimal.rs  macros.rs  mod.rs  ordered.rs  unit_convertor.rs
(+34 files in other folders)
