[package]
name = "rbm-rs"
version = "0.1.0"
edition = "2021"

exclude = [
    "Makefile",
    "TODO.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "rbm-structpack",
]

[workspace.dependencies]
byteorder = "1"
paste = "1.0.14"
